acceptance/data-exporter-backend/data-exporter-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exporter-backend-deployment
  namespace: default
  labels:
    app: data-exporter-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exporter-backend
  template:
    metadata:
      labels:
        app: data-exporter-backend
        language: java
    spec:
      serviceAccountName: data-exporter-backend-service-account
      automountServiceAccountToken: true
      containers:
        - name: data-exporter-backend
          image: public.ecr.aws/dissco/dissco-data-exporter-backend:sha-85a521b   # Jul-06-2026
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "750m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: db-secrets
              mountPath: "/mnt/secrets-store/db-secrets"
              readOnly: true
            - name: aws-secrets
              mountPath: "/mnt/secrets-store/aws-secrets"
              readOnly: true
      volumes:
        - name: db-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "db-secrets"
        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
