acceptance/data-exporter-backend/data-exporter-backend-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-exporter-backend-service
spec:
  selector:
    app: data-exporter-backend
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: data-exporter-backend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech`) && PathPrefix(`/api/v1/data-export`)
      kind: Rule
      services:
        - name: data-exporter-backend-service
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-data-exporter-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dissco-data-exporter-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/data-export
    forceSlash: false
